<resources>
    <string name="app_name">TriLock</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="textview_login_title">Log In</string>
    <string name="edittext_email_login">Email</string>
    <string name="edittext_email_hint">Email</string>
    <string name="edittext_password_hint">Password</string>
    <string name="users">Users</string>
    <string name="activity_history">Activity History</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="unlocked">Unlocked</string>
    <string name="locked">Locked</string>
    <!-- Strings related to settings -->

    <string name="settings">Settings</string>

    <string name="turn_on_biometric_authentication">Turn on biometric authentication</string>
    <!-- Strings related to people -->
    <string name="allow">Allow permissions</string>
    <string name="allowed">Permissions granted</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="already_account">Already have an account? Sign in</string>
    <string name="not_account">Don\'t have an account? Register!</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <!-- Strings related to Lock fragment -->
    <string name="lock_title_alert">Lock TriLock</string>
    <string name="unlock_title_alert">Unlock TriLock</string>
    <string name="lock_support_lock">Do you want to lock your TriLock?</string>
    <string name="lock_support_unlock">Do you want to unlock your TriLock?</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>

    <!-- Strings related to activity history -->
    <string name="history_lock"> has locked the TriLock</string>
    <string name="history_unlock"> has unlocked the TriLock</string>
    <string name="log_out">Log out</string>
    <string name="select_lock">Select Lock</string>
    <string name="enter_code_on_the_back_of_your_lock">Enter code on the back of your lock</string>
    <string name="add_lock">Add Lock</string>
    <string name="title_of_your_trilock">Title of your TriLock</string>
    <string name="next_lock">Next Lock</string>
    <string name="invite_user">Invite user</string>
    <string name="email">Email</string>
    <string name="lock_title">Lock Title</string>
    <string name="add_person">Add Person</string>
    <string name="fingerprint">Fingerprint</string>


</resources>